--- a/modules/characters/client/views/form-character.client.view.html
+++ b/modules/characters/client/views/form-character.client.view.html
@@ -8,40 +8,83 @@
     <form name="vm.form.characterForm" class="form-horizontal" ng-submit="vm.save(vm.form.characterForm.$valid)" novalidate>
       <fieldset>
 
-        <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
-          <input name="name" type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
-          <div ng-messages="vm.form.characterForm.name.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Character name is required.</p>
-          </div>
+        <div class="row">
+            <div class="form-group col-md-5" show-errors>
+              <label class="control-label" for="name">Name</label>
+              <input name="name" type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
+              <div ng-messages="vm.form.characterForm.name.$error" role="alert">
+                <p class="help-block error-text" ng-message="required">Character name is required.</p>
+              </div>
+            </div>
+
+            <div class="form-group col-md-5 col-md-offset-2" show-errors>
+                <label class="control-label" for="playableClass">Class</label><br />
+                <select name="playableClass" ng-model="vm.character.playableClass">
+                    <option ng-repeat="c in vm.classes" value="c">{{c}}</option>
+                </select>
+            </div>
         </div>
 
         <div class="row">
-            <h3>Attributes</h3>
             <div class="form-group col-md-6">
+                <h3>Attributes</h3>
                 <div class="col-sm-2 text-center">STR <br />
-                    <input name="Strength" type="number" ng-model="vm.character.attributes.strength" class="form-control att-entry" required ng-init="vm.character.attributes.strength=10">
+                    <input name="Strength"
+                            type="number"
+                            ng-model="vm.character.attributes.strength"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.strength=10">
                 </div>
                 <div class="col-sm-2 text-center">DEX <br />
-                    <input name="Dexterity" type="number" ng-model="vm.character.attributes.dexterity" class="form-control att-entry" required ng-init="vm.character.attributes.dexterity=10">
+                    <input name="Dexterity"
+                            type="number"
+                            ng-model="vm.character.attributes.dexterity"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.dexterity=10">
                 </div>
                 <div class="col-sm-2 text-center">CON<br />
-                    <input name="Constitution" type="number" ng-model="vm.character.attributes.constitution" class="form-control att-entry" required ng-init="vm.character.attributes.constitution=10">
+                    <input name="Constitution"
+                            type="number"
+                            ng-model="vm.character.attributes.constitution"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.constitution=10">
                 </div>
                 <div class="col-sm-2 text-center">INT<br />
-                    <input name="Intelligence" type="number" ng-model="vm.character.attributes.intelligence" class="form-control att-entry" required ng-init="vm.character.attributes.intelligence=10">
+                    <input name="Intelligence"
+                            type="number"
+                            ng-model="vm.character.attributes.intelligence"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.intelligence=10">
                 </div>
                 <div class="col-sm-2 text-center">WIS<br />
-                    <input name="Wisdom" type="number" ng-model="vm.character.attributes.wisdom" class="form-control att-entry" required ng-init="vm.character.attributes.wisdom=10">
+                    <input name="Wisdom"
+                            type="number"
+                            ng-model="vm.character.attributes.wisdom"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.wisdom=10">
                 </div>
                 <div class="col-sm-2 text-center">CHA<br />
-                    <input name="Charisma" type="number" ng-model="vm.character.attributes.charisma" class="form-control att-entry" required ng-init="vm.character.attributes.charisma=10">
+                    <input name="Charisma"
+                            type="number"
+                            ng-model="vm.character.attributes.charisma"
+                            class="form-control att-entry" required
+                            ng-init="vm.character.attributes.charisma=10">
                 </div>
             </div>
             <div class="col-md-6">
-                Test
+                <h3>Proficiencies</h3>
+                <h4>Saves</h4>
+                <h4>Skills</h4>
             </div>
         </div>
+
+        <h3>Inventory</h3>
+
+        <h3>Descriptions</h3>
+        <h4>Traits</h4>
+        <h4>Backstory</h4>
+
+        <h3>Spells</h3>
 
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.character._id ? 'Update' : 'Create'}}</button>
