--- a/modules/characters/client/views/form-character.client.view.html
+++ b/modules/characters/client/views/form-character.client.view.html
@@ -2,170 +2,29 @@
     <link rel="stylesheet" href="modules/characters/client/css/characterCreation.css" />
 
   <div class="page-header">
-    <h1>{{vm.character._id ? 'Edit Character' : 'New Character'}}</h1>
+    <h1>{{vm.character._id ? 'Edit Character' : 'New Character'}}  {{vm.creationSteps[vm.step].title}}</h1>
   </div>
   <div class="col-md-12">
     <form name="vm.form.characterForm" class="form-horizontal" ng-submit="vm.save(vm.form.characterForm.$valid)" novalidate>
       <fieldset>
 
-        <!-- Basics -->
+        <!-- Subview loaded here  -->
         <div class="col-md-6">
-
-        <div class="row" ng-show="vm.step === 0">
-          <div class="row">
-            <div class="form-group col-md-8" show-errors>
-              <label class="control-label" for="name">Character's Name</label>
-              <input name="name" type="text" ng-model="vm.character.name" id="name" class="form-control" placeholder="Name" required>
-              <div ng-messages="vm.form.characterForm.name.$error" role="alert">
-                <p class="help-block error-text" ng-message="required">Character name is required.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-              <div class="form-group" show-errors>
-                  <label class="control-label" for="race">Characer's Race</label><br />
-                  <select class="form-control" name="race" ng-model="vm.character.race" required>
-                      <option ng-repeat="c in vm.races" value="{{c.race}}">{{c.description}}</option>
-                  </select>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-                <div class="form-group" show-errors>
-                    <label class="control-label" for="playableClass">Character Class</label><br />
-                    <select class="form-control" name="playableClass" ng-model="vm.character.playableClass" required>
-                        <option ng-repeat="c in vm.classes" value="{{c}}">{{c}}</option>
-                    </select>
-                </div>
-            </div>
-          </div>
-        </div>
-
-
-        <!-- Attributes -->
-        <div class="row" ng-show="vm.step === 1">
-            <div class="form-group row">
-                <h3>Attributes</h3>
-                <div class="col-sm-2 text-center">STR <br />
-                    <input name="Strength"
-                            type="number"
-                            ng-model="vm.character.attributes.strength"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.strength=10">
-                </div>
-                <div class="col-sm-2 text-center">DEX <br />
-                    <input name="Dexterity"
-                            type="number"
-                            ng-model="vm.character.attributes.dexterity"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.dexterity=10">
-                </div>
-                <div class="col-sm-2 text-center">CON<br />
-                    <input name="Constitution"
-                            type="number"
-                            ng-model="vm.character.attributes.constitution"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.constitution=10">
-                </div>
-                <div class="col-sm-2 text-center">INT<br />
-                    <input name="Intelligence"
-                            type="number"
-                            ng-model="vm.character.attributes.intelligence"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.intelligence=10">
-                </div>
-                <div class="col-sm-2 text-center">WIS<br />
-                    <input name="Wisdom"
-                            type="number"
-                            ng-model="vm.character.attributes.wisdom"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.wisdom=10">
-                </div>
-                <div class="col-sm-2 text-center">CHA<br />
-                    <input name="Charisma"
-                            type="number"
-                            ng-model="vm.character.attributes.charisma"
-                            class="form-control att-entry" required
-                            ng-init="vm.character.attributes.charisma=10">
-                </div>
-            </div>
-
-            <!-- Proficiencies -->
-            <div class="row">
-                <h3>Proficiencies</h3>
-                <h4>Saves</h4>
-                <h4>Skills</h4>
-            </div>
-        </div>
-
-        <!-- Inventory -->
-        <div class="row" ng-show="vm.step === 2">
-          <h3>Inventory</h3>
-        </div>
-
-        <div class="row" ng-show="vm.step === 3">
-          <!-- Flavor -->
-          <h3>Descriptions</h3>
-          <h4>Background</h4>
-          <div class="row">
-            <div class="form-group" show-errors>
-              <label class="control-label" for="background.trait">Personality Trait</label>
-              <textarea name="trait" type="text" ng-model="vm.character.background.trait" id="trait" class="form-control" placeholder="Personality Trait"></textarea>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="form-group" show-errors>
-              <label class="control-label" for="background.ideal">Ideology</label>
-              <textarea name="ideal" type="text" ng-model="vm.character.background.ideal" id="ideal" class="form-control" placeholder="Ideology"></textarea>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="form-group" show-errors>
-              <label class="control-label" for="background.bond">Bond</label>
-              <textarea name="bond" type="text" ng-model="vm.character.background.bond" id="bond" class="form-control" placeholder="Bond"></textarea>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="form-group" show-errors>
-              <label class="control-label" for="background.flaw">Character Flaw</label>
-              <textarea name="flaw" type="text" ng-model="vm.character.background.flaw" id="flaw" class="form-control" placeholder="Character Flaw"></textarea>
-            </div>
-          </div>
-
-          <h4>Character History</h4>
-          <div class="row">
-            <div class="form-group" show-errors>
-              <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" id="backstory" class="form-control" placeholder="Character History"></textarea>
-            </div>
-          </div>
-        </div>
-
-        <!-- Spells (if applicable) -->
-        <div class="row" ng-show="vm.step === 4 && vm.isSpellCaster()">
-          <h3>Spells</h3>
-        </div>
-
-        <!-- Needs to be CONSISTENTLY in the same place -->
-        <div ng-show="(vm.step ===5 && vm.isSpellCaster()) || vm.step === 4 && !vm.isSpellCaster()">
-          <div class="form-group">
-            <button type="submit" class="btn btn-default">{{vm.character._id ? 'Update' : 'Create'}}</button>
-          </div>
-        </div>
-
+          <div ng-repeat="step in vm.creationSteps" ng-show="vm.step === $index" ng-include="step.template"></div>
         </div>
         <div class="col-md-5 col-md-offset-1">
           <div class="row">
-            <h3>Help Area</h3>
+            <div ng-include="vm.creationSteps[vm.step].help"></div>
           </div>
-          <button class="btn btn-default" ng-click="vm.previousStep()">Back</button>
-          <button class="btn btn-default" ng-click="vm.nextStep()">Next</button>
+          <button type="button" ng-disabled="vm.step === 0" class="btn btn-default" ng-click="vm.previousStep()">Back</button>
+          <button type="button" class="btn btn-default" ng-click="vm.nextStep()">Next</button>
+
+          <!-- Needs to be CONSISTENTLY in the same place -->
+          <div ng-show="(vm.step === 5 && vm.isSpellCaster()) || vm.step === 4 && !vm.isSpellCaster()">
+            <div class="form-group">
+              <button type="submit" class="btn btn-default">{{vm.character._id ? 'Update' : 'Create'}}</button>
+            </div>
+          </div>
         </div>
         <div ng-show="vm.error" class="text-danger">
           <strong ng-bind="vm.error"></strong>
