--- a/modules/characters/client/views/creationSteps/character.creation.basics.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.basics.view.html
@@ -29,5 +29,8 @@
 </div>
 
 <div class="row">
-
+  <div class="form-group col-md-10" show-errors>
+      <label class="control-label" for="appearance">Character Appearance</label><br />
+    <textarea name="appearance" type="text" ng-model="vm.character.appearance" id="appearance" class="form-control" placeholder="Character Appearance"></textarea>
+  </div>
 </div>
