--- a/modules/characters/client/views/creationSteps/character.creation.background.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.background.view.html
@@ -1,4 +1,3 @@
-<h3>Descriptions</h3>
 <div class="row">
   <div class="form-group" show-errors>
     <label class="control-label" for="background.trait">Personality Trait</label>
@@ -28,10 +27,9 @@
 </div>
 
 <hr />
-
-<h4>Character History</h4>
 <div class="row">
   <div class="form-group" show-errors>
+    <label class="control-label" for="background.flaw">Character history</label>
     <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" id="backstory" class="form-control" placeholder="Character History"></textarea>
   </div>
 </div>
