backgrounds have some more detail

--- a/modules/characters/client/views/creationHelp/character.creation.background.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.background.help.view.html
@@ -1,1 +1,7 @@
-<h3>Background Traits</h3>
+Here you can add data about your character's personality and history.
+<br />
+<ol>
+  <li>Enter a custom <b>Generalization</b> or pick one of the available options</li>
+  <li>Enter custom flaws, traits, etc. or hit the die icon to randomly select one to your generalization (if not custom).</li>
+  <li>Write a sentence or two (or even an essay) about how your character came to be at Consultants and Dragons.</li>
+</ol>
