--- a/modules/characters/client/views/creationSteps/character.creation.background.view.html
+++ b/modules/characters/client/views/creationSteps/character.creation.background.view.html
@@ -1,7 +1,10 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 <div class="row">
   <div class="form-group" show-errors>
     <label class="control-label" for="background.trait">Personality Trait</label>
     <input name="trait" type="text" ng-model="vm.character.background.trait" id="trait" class="form-control" placeholder="Personality Trait"></input>
+    <button type="button"><i class="fa fa-random"></i></button>
   </div>
 </div>
 
@@ -9,6 +12,7 @@
   <div class="form-group" show-errors>
     <label class="control-label" for="background.ideal">Ideology</label>
     <input name="ideal" type="text" ng-model="vm.character.background.ideal" id="ideal" class="form-control" placeholder="Ideology"></input>
+    <button type="button"><i class="fa fa-random"></i></button>
   </div>
 </div>
 
@@ -16,6 +20,7 @@
   <div class="form-group" show-errors>
     <label class="control-label" for="background.bond">Bond</label>
     <input name="bond" type="text" ng-model="vm.character.background.bond" id="bond" class="form-control" placeholder="Bond"></input>
+    <button type="button"><i class="fa fa-random"></i></button>
   </div>
 </div>
 
@@ -23,13 +28,14 @@
   <div class="form-group" show-errors>
     <label class="control-label" for="background.flaw">Character Flaw</label>
     <input name="flaw" type="text" ng-model="vm.character.background.flaw" id="flaw" class="form-control" placeholder="Character Flaw"></input>
+    <button type="button"><i class="fa fa-random"></i></button>
   </div>
 </div>
 
 <hr />
 <div class="row">
   <div class="form-group" show-errors>
-    <label class="control-label" for="background.flaw">Character history</label>
+    <label class="control-label" for="background.flaw">Character History</label>
     <textarea name="backstory" type="text" ng-model="vm.character.background.backstory" id="backstory" class="form-control" placeholder="Character History"></textarea>
   </div>
 </div>
