--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,15 +1,22 @@
 <section ng-controller="HomeController">
-  <div class="jumbotron text-center">
+  <div class="jumbotron">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
+      <div class="col-md-3 col-sm-3 col-xs-12">
         <img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/client/img/brand/cndemblem.png" />
+      </div>
+      <div class="col-md-8 col-md-offset-1 col-sm-8 col-sm-offset-1">
+        <h2>Consultants & Dragons</h2>
+        <div class="row" ng-if="!authentication.user" >
+            Embark on an adventure into the world of Dungeons and Dragons. Enlist today!<br /><br />
+            <a class="btn btn-primary btn-lg" href="authentication/signup" target="_blank">Enlist</a>
+        </div>
+        <div class="row" ng-if="authentication.user">
+          Welcome to the Consultants and Dragons home.
+        </div>
       </div>
     </div>
     <br>
-    <div class="row" ng-if="!authentication.user" >
-      <p>
-        <a class="btn btn-primary btn-lg" href="authentication/signup" target="_blank">Enlist</a>
-      </p>
-    </div>
   </div>
+  <h3>Other things I guess</h3>
+  <p> Stuff down here</p>
 </section>
