--- a/modules/contracts/client/views/form-contract.client.view.html
+++ b/modules/contracts/client/views/form-contract.client.view.html
@@ -5,13 +5,32 @@
   <div class="col-md-12">
     <form name="vm.form.contractForm" class="form-horizontal" ng-submit="vm.save(vm.form.contractForm.$valid)" novalidate>
       <fieldset>
+
         <div class="form-group" show-errors>
-          <label class="control-label" for="name">Name</label>
+          <label class="control-label" for="name">Contract Name</label>
           <input name="name" type="text" ng-model="vm.contract.name" id="name" class="form-control" placeholder="Name" required>
           <div ng-messages="vm.form.contractForm.name.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Contract name is required.</p>
           </div>
         </div>
+
+        <div class="form-group" show-errors>
+          <label class="control-label" for="details">Contract Details</label>
+          <textarea name="details" type="text" ng-model="vm.contract.details" id="details" class="form-control" placeholder="Details" required>
+          </textarea>
+          <div ng-messages="vm.form.contractForm.details.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Contract Details are required.</p>
+          </div>
+        </div>
+
+        <div class="form-group" show-errors>
+          <label class="control-label" for="rewards">Rewards</label>
+          <input name="rewards" type="text" ng-model="vm.contract.rewards" id="rewards" class="form-control" placeholder="Rewards" required>
+          <div ng-messages="vm.form.contractForm.rewards.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Rewards are required.</p>
+          </div>
+        </div>
+
         <div class="form-group">
           <button type="submit" class="btn btn-default">{{vm.contract._id ? 'Update' : 'Create'}}</button>
         </div>
