Added Descriptions for class picking during character selection

--- a/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
@@ -1,12 +1,14 @@
 <h3>Essential Information</h3>
-Before we get into the nitty gritty of character creation, pick a character name, race, class, and provide a little information about the character's appearance. when you pick a race or class, information about your selection will appear below.
+<p>
+  Before we get into the nitty gritty of character creation, pick a character name, race, class, and provide a little information about the character's appearance. when you pick a race or class, information about your selection will appear below.
+</p>
 
 <div ng-show="vm.character.race">
-  <hr />
-  Information about the <b>{{vm.character.race}}</b>
+  <p>Information about the <b>{{vm.character.race}}</b></p>
 </div>
 
 <div ng-show="vm.character.playableClass">
-  <hr />
-  Information about the <b>{{vm.character.playableClass}}</b>
+  <p>
+    <b>{{vm.character.playableClass}}:</b>  {{vm.getClassDescription()}}
+  </p>
 </div>
