--- a/modules/configurations/client/views/form-configuration.client.view.html
+++ b/modules/configurations/client/views/form-configuration.client.view.html
@@ -26,6 +26,31 @@
           </div>
         </div>
 
+        <!-- Class Declarations -->
+        <div class="form-group" show-errors>
+          <label class="control-label" for="classes">Available Classes</label>
+          <button type="button" ng-click="vm.addClass()" class="btn btn-default">Add</button>
+          <div ng-repeat="c in vm.configuration.classes">
+            <div class="row">
+              <div class="col-sm-5">
+                <label class="control-label" for="c.name">Name</label>
+                <input name="enabled" type="text" ng-model="c.name" class="form-control" required>
+              </div>
+              <div class="col-sm-offset-1 col-sm-2">
+                <label class="control-label" for="c.hitDice">HD Type</label>
+                <input name="enabled" type="number" ng-model="c.hitDice" class="form-control" required>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-10">
+                <label class="control-label" for="c.description">Class Description</label>
+                <textarea name="enabled" ng-model="c.description" class="form-control" required
+                  pleaceholder="Enter some information about this class (used in the Help Area for Character Creation)">
+                </textarea>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <div class="form-group" show-errors>
           <label class="control-label" for="maximumSessionSize">Maximum Session Size</label>
