--- a/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.attributes.help.view.html
@@ -1,7 +1,8 @@
-<h3>Attributes</h3>
-<p><b>Strength</b> measures your character's muscle and physical power.</p>
-<p><b>Dexterity</b> measures hand-eye coordination, agility, reflexes, and balance.</p>
-<p><b>Constitution</b> represents your character's health and stamina.</p>
-<p><b>Intelligence</b> determines how well your character learns and reasons.</p>
-<p><b>Wisdom</b> measures willpower, common sense, perception, and intuition.</p>
-<p><b>Charisma</b> measures a character's force of personality upon others.</p>
+<ul>
+  <li><b>Strength</b> measures your character's muscle and physical power.</li>
+  <li><b>Dexterity</b> measures agility, reflexes, and balance.</li>
+  <li><b>Constitution</b> represents your character's health and stamina.</li>
+  <li><b>Intelligence</b> determines how well your character learns/reasons.</li>
+  <li><b>Wisdom</b> measures willpower, sense, and intuition.</li>
+  <li><b>Charisma</b> measures a character's force of personality upon others.</li>
+</u>
