--- a/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
+++ b/modules/characters/client/views/creationHelp/character.creation.basics.help.view.html
@@ -1,4 +1,3 @@
-<h3>Essential Information</h3>
 <p>
   Before we get into the nitty gritty of character creation, pick a character name, race, class, and provide a little information about the character's appearance. when you pick a race or class, information about your selection will appear below.
 </p>
@@ -8,7 +7,5 @@
 </div>
 
 <div ng-show="vm.character.playableClass">
-  <p>
-    <b>{{vm.character.playableClass}}:</b>  {{vm.getClassDescription()}}
-  </p>
+  <p><b>{{vm.character.playableClass}}:</b>  {{vm.getClassDescription()}}</p>
 </div>
