--- a/modules/characters/client/views/form-character.client.view.html
+++ b/modules/characters/client/views/form-character.client.view.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="modules/characters/client/css/characterCreation.css" />
 
   <div class="page-header">
-    <h1>{{vm.character._id ? 'Edit Character' : 'Character Creation'}} >> {{vm.creationSteps[vm.step].title}}</h1>
+    <h1>{{vm.character._id ? 'Edit Character' : 'Character Creation'}}</h1>
   </div>
   <div class="col-md-12">
     <form name="vm.form.characterForm" class="form-vertical" ng-submit="vm.save(vm.form.characterForm.$valid)" novalidate>
@@ -12,15 +12,20 @@
         <div class="col-md-6">
           <div ng-repeat="step in vm.creationSteps" ng-show="vm.step === $index" ng-include="step.template"></div>
         </div>
-        <div class="col-md-5 col-md-offset-1 well">
 
+        <!-- Help Area -->
+        <div class="col-md-5 col-md-offset-1 well help-area">
+          <div class="text-center row">
+            <h3>{{vm.creationSteps[vm.step].title}}</h3>
+          </div>
           <div class="row" style="height: auto; min-height: 300px">
             <div ng-include="vm.creationSteps[vm.step].help"></div>
-
             <div ng-show="vm.error" class="text-danger">
               <strong ng-bind="vm.error"></strong>
             </div>
           </div>
+
+          <!-- Help Area Buttons -->
           <div class="row">
             <div class="col-sm-3 col-sm-offset-2">
               <button type="button" ng-disabled="vm.step === 0" class="btn btn-default" ng-click="vm.previousStep()">Back</button>
@@ -35,10 +40,8 @@
                 </div>
               </div>
             </div>
+
           </div>
-
-          <!-- Needs to be CONSISTENTLY in the same place -->
-
         </div>
 
       </fieldset>
