--- a/modules/configurations/client/views/form-configuration.client.view.html
+++ b/modules/configurations/client/views/form-configuration.client.view.html
@@ -29,7 +29,7 @@
         <!-- Class Declarations -->
         <div class="form-group" show-errors>
           <label class="control-label" for="classes">Available Classes</label>
-          <button type="button" ng-click="vm.addClass()" class="btn btn-default">Add</button>
+          <button type="button" ng-click="vm.addClass()" class="btn btn-default">Add Class</button>
           <div ng-repeat="c in vm.configuration.classes">
             <div class="row">
               <div class="col-sm-5">
@@ -46,6 +46,28 @@
                 <label class="control-label" for="c.description">Class Description</label>
                 <textarea name="enabled" ng-model="c.description" class="form-control" required
                   pleaceholder="Enter some information about this class (used in the Help Area for Character Creation)">
+                </textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Race Declarations -->
+        <div class="form-group" show-errors>
+          <label class="control-label" for="races">Available Races</label>
+          <button type="button" ng-click="vm.addRace()" class="btn btn-default">Add Race</button>
+          <div ng-repeat="c in vm.configuration.races">
+            <div class="row">
+              <div class="col-sm-5">
+                <label class="control-label" for="c.name">Name</label>
+                <input name="enabled" type="text" ng-model="c.name" class="form-control" required>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-10">
+                <label class="control-label" for="c.description">Race Description</label>
+                <textarea name="enabled" ng-model="c.description" class="form-control" required
+                  pleaceholder="Enter some information about this race (used in the Help Area for Character Creation)">
                 </textarea>
               </div>
             </div>
