--- a/modules/configurations/client/views/list-configurations.client.view.html
+++ b/modules/configurations/client/views/list-configurations.client.view.html
@@ -4,7 +4,7 @@
   </div>
   <div class="list-group">
     <a data-ng-repeat="configuration in vm.configurations"
-       data-ui-sref="configurations.edit({ configurationId: configuration._id })"
+       data-ui-sref="configurations.edit.basics({ configurationId: configuration._id })"
        class="list-group-item">
       <small class="list-group-item-text">
         Posted on
